adding alt tag to img src for banner

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
   <body>
     <header>
       <div class="inner">
-	<img src="https://paara.org/images/banner-home-900-3.jpg">
+	<img src="https://paara.org/images/banner-home-900-3.jpg" alt="banner">
 
       </div>
     </header>
