--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,27 +26,16 @@
 
     <div id="content-wrapper">
       <div class="inner clearfix">
+
+        <aside id="sidebar">
+	  <a href="index.html">Home</a>
+	  <a href="new-ham-welcome.md">Welcome New Ham</a>
+
+        </aside>
+
         <section id="main-content">
           {{ content }}
         </section>
-
-        <aside id="sidebar">
-          {% if site.show_downloads %}
-            <a href="{{ site.github.zip_url }}" class="button">
-              <small>Download</small>
-              .zip file
-            </a>
-            <a href="{{ site.github.tar_url }}" class="button">
-              <small>Download</small>
-              .tar.gz file
-            </a>
-          {% endif %}
-
-          {% if site.github.is_project_page %}
-            <p class="repo-owner"><a href="{{ site.github.repository_url }}">{{ site.github.repository_name }}</a> is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>.</p>
-          {% endif %}
-
-        </aside>
       </div>
     </div>
 
