adding new-ham-welcome.md

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
       <div class="inner clearfix">
 
         <aside id="sidebar">
-	  <a href="index.html">Home</a>
+	  <a href="index.md">Home</a>
 	  <a href="new-ham-welcome.md">Welcome New Ham</a>
 
         </aside>
