pointing to .html instead of .md to see if it gets rendered better

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
 
         <aside id="sidebar">
 	  <a href="index.md">Home</a>
-	  <a href="new-ham-welcome.md">Welcome New Ham</a>
+	  <a href="new-ham-welcome.html">Welcome New Ham</a>
 
         </aside>
 
