add newline between links in the left side nav panel

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
       <div class="inner clearfix">
 
         <aside id="sidebar">
-	  <a href="index.md">Home</a>
+	  <a href="index.md">Home</a><br>
 	  <a href="new-ham-welcome.html">Welcome New Ham</a>
 
         </aside>
