try to increase the font for the sidebar

--- a/_sass/jekyll-theme-architect.scss
+++ b/_sass/jekyll-theme-architect.scss
@@ -75,6 +75,10 @@ header h2 {
 
 aside#sidebar {
   float: left;
+  font-family: 'Helvetica Neue', Helvetica, Arial, serif;
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 1.5;
   width: 200px;
   min-height: 504px;
   padding-left: 20px;
