--- a/_sass/jekyll-theme-architect.scss
+++ b/_sass/jekyll-theme-architect.scss
@@ -76,13 +76,12 @@ header h2 {
 aside#sidebar {
   float: left;
   font-family: 'Helvetica Neue', Helvetica, Arial, serif;
-  font-size: 25px;
-  font-weight: 400;
+  font-size: 20px;
+  font-weight: bold;
   line-height: 1.5;
   width: 200px;
   min-height: 504px;
   padding-left: 20px;
-  font-size: 12px;
   line-height: 1.3;
   background: transparent url(../images/sidebar-bg.jpg) 0 0 no-repeat;
 }
