--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
   <body>
     <header>
       <div class="inner">
-	<img src="https://paara.org/images/banner-home-900-3.jpg" alt="banner">
+	<a href="/"><img src="https://paara.org/images/banner-home-900-3.jpg" alt="banner"></a>
 
       </div>
     </header>
@@ -28,7 +28,7 @@
       <div class="inner clearfix">
 
         <aside id="sidebar">
-	  <a href="index.md">Home</a><br>
+	  <a href="index.html">Home</a><br>
 	  <a href="new-ham-welcome.html">Welcome New Ham</a>
 
         </aside>
