adding {{ site.base_url }}/ in front oh hyperlinks

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,8 +28,8 @@
       <div class="inner clearfix">
 
         <aside id="sidebar">
-	  <a href="index.html">Home</a><br>
-	  <a href="new-ham-welcome.html">Welcome New Ham</a>
+	  <a href="{{ site.base_url }}/index.html">Home</a><br>
+	  <a href="{{ site.base_url }}/new-ham-welcome.html">Welcome New Ham</a>
 
         </aside>
 
