--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,9 +28,23 @@
       <div class="inner clearfix">
 
         <aside id="sidebar">
-	  <a href="{{ site.base_url }}/index.html">Home</a><br>
-	  <a href="{{ site.base_url }}/new-ham-welcome.html">Welcome New Ham</a>
-
+          <a href="{{ site.base_url }}/index.html">Home</a><br>
+          <a href="{{ site.base_url }}/newham.html">New Ham Welcome</a><br>
+          <a href="{{ site.base_url }}/aboutus.html">About Us</a><br>
+          <a href="{{ site.base_url }}/calendar.html">Calendar</a><br>
+          <a href="{{ site.base_url }}/events.html">Events</a><br>
+          <a href="{{ site.base_url }}/fieldday.html">Field Day</a><br>
+          <a href="{{ site.base_url }}/forsale.html">For Sale</a><br>
+          <a href="{{ site.base_url }}/funstuff.html">Fun Stuff</a><br>
+          <a href="{{ site.base_url }}/meetings.html">Meetings</a><br>
+          <a href="{{ site.base_url }}/membership.html">Membership</a><br>
+          <a href="{{ site.base_url }}/nets.html">Nets</a><br>
+          <a href="{{ site.base_url }}/newsletter.html"></a>Newsletter<br>
+          <a href="{{ site.base_url }}/officers.html">Officers</a><br>
+          <a href="{{ site.base_url }}/photos.html">Photos</a><br>
+          <a href="{{ site.base_url }}/resources.html">Resources</a><br>
+          <a href="{{ site.base_url }}/sigs.html">SIGS</a><br>
+          <a href="{{ site.base_url }}/sponsors.html">Sponsors</a><br>
         </aside>
 
         <section id="main-content">
