Delete unused page, and open external hyperlinks in a new page.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
           <a href="{{ site.base_url }}/meetings.html">Meetings</a><br>
           <a href="{{ site.base_url }}/membership.html">Membership</a><br>
           <a href="{{ site.base_url }}/nets.html">Nets</a><br>
-          <a href="{{ site.base_url }}/newsletter.html"></a>Newsletter<br>
+          <a href="{{ site.base_url }}/newsletter.html">Newsletter</a><br>
           <a href="{{ site.base_url }}/officers.html">Officers</a><br>
           <a href="{{ site.base_url }}/photos.html">Photos</a><br>
           <a href="{{ site.base_url }}/resources.html">Resources</a><br>
