Change banner from link to just imate.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
   <body>
     <header>
       <div class="inner">
-	<a href="/"><img src="https://paara.org/images/banner-home-900-3.jpg" alt="banner"></a>
+	<img height="120" src="images/banner-home-900-3.jpg" width="900">
 
       </div>
     </header>
