--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
   <body>
     <header>
       <div class="inner">
-	<img height="120" src="images/banner-home-900-3.jpg" width="900">
+	<img height="90%" src="images/banner-home-900-3.jpg" width="90%">
 
       </div>
     </header>
