--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,9 +28,7 @@
 
         <aside id="sidebar">
           {% for item in site.data.navigation %}
-            <li class="sidebar{% if page.url == item.link %} current{% endif %}">
-              <a href="{{ item.link }}">{{ item.name }}</a>
-            </li>
+            <a class="sidebar{% if page.url == item.link %} current{% endif %}" href="{{ item.link }}">{{ item.name }}</a>
           {% endfor %}
         </aside>
 
