adding shadow and bolder

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,6 +4,6 @@
 @import 'jekyll-theme-architect';
 
 .sidebar.current {
-  font-weight: bold;
-  background-color: black;
+  font-weight: bolder;
+  text-shadow: black;
 }
