add alt label for /images/bannersub-900.jpg

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
   <body>
     <header>
       <div class="inner">
-	      <img height="100%" src="/images/bannersub-900.jpg" width="100%">
+	      <img height="100%" src="/images/bannersub-900.jpg" width="100%" alt="banner">
       </div>
     </header>
 
