remove height and width 100% from the banner

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
   <body>
     <header>
       <div class="inner">
-	      <img height="100%" src="/images/bannersub-900.jpg" width="100%" alt="banner">
+	      <img src="/images/bannersub-900.jpg" alt="banner">
       </div>
     </header>
 
