--- a/_sass/jekyll-theme-architect.scss
+++ b/_sass/jekyll-theme-architect.scss
@@ -59,6 +59,12 @@ header h2 {
   margin: 0 auto;
 }
 
+.inner img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+}
+
 #content-wrapper {
   padding-top: 30px;
   border-top: solid 1px #fff;
