add a footer section to guide people on how to report website issues

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,6 +41,9 @@
         <section id="main-content">
           {{ content }}
         </section>
+	<section id="footer">
+          {% include footer.html %}
+	</section>
       </div>
     </div>
 
