slightly modify the footer message

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer style="text-align:center; padding: 1em 0; color: #888;">
-  For issues with any of the website content, please email webmaster@paara.org, or <a href="https://github.com/PAARA-org/paara-org.github.io/issues/new/choose">file an issue on GitHub</a>(requires login).
+  Email <mailto:webmaster@paara.org> or <a href="https://github.com/PAARA-org/paara-org.github.io/issues/new/choose">[file an issue on GitHub]</a> for any website issue.
   <br>
   © 1937-2025 Palo Alto Amateur Radio Association
 </footer>
