--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
   <center>
     <br>
     <br>
-    Email <a href="mailto:webmaster@paara.org">webmaster@paara.org</a> or <a href="https://github.com/PAARA-org/paara-org.github.io/issues/new/choose">file an issue on GitHub</a> for any issue with the website.
+    Email <a href="mailto:webmaster@paara.org">webmaster@paara.org</a> or <a href="https://github.com/PAARA-org/paara-org.github.io/issues/new/choose">file an issue on GitHub</a> for any problem with the website.
     <br>
     © 1937-2025 Palo Alto Amateur Radio Association
   </center>
