show the N6NFI repeater for weekly net on every page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,6 +39,10 @@
         </aside>
 
         <section id="main-content">
+          <div style="text-align: right; font-size: 12px">
+          <a href="/nets.html">Weekly net</a> every Monday 8:30pm on <b><a href="https://www.fars.k6ya.org/repeaters/n6nfi" target="_blank">N6NFI</a></b> 145.230 MHz (-) 100Hz
+          </div>
+          <hr>
           {{ content }}
         </section>
 	<section id="footer">
