Encode the current page for reporting GitHub issues

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
   <p style="text-align:center">
     <br>
     <br>
-    Email <a href="mailto:webmaster@paara.org">webmaster@paara.org</a> or <a href="https://github.com/PAARA-org/paara-org.github.io/issues/new/choose">file an issue on GitHub</a> for any problem with the website.
+    Email <a href="mailto:webmaster@paara.org">webmaster@paara.org</a> or <a href="https://github.com/PAARA-org/paara-org.github.io/issues/new?title=Feedback%20for%20the%20{{ page.title }}i%20page&body=Page%20URL:%20{{ page.url | absolute_url | url_encode }}%0A%0AProblem%20description:%20%3Center%20description%20here%3E" target="blank">file an issue on GitHub</a> for any problem with the website.
     <br>
     © 1937-2025 Palo Alto Amateur Radio Association
   </p>
